Fix text-alignment in resource directory tables

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -25,7 +25,7 @@
 
 .space { margin-top: 300px; }
 
-#wrapper p {
+#banner p {
   text-align: justify !important;
 }
 
